style: 調整 Header 排版

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,11 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.container {
+  padding: 0 0.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
