--- a/components/header/Header.module.css
+++ b/components/header/Header.module.css
@@ -1,8 +1,17 @@
 .main {
-    padding: 5rem 0;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    padding: 1rem 0;
+}
+
+.main ul {
+    overflow: hidden;
+    list-style: none;
+}
+
+.main li {
+    display: inline;
+    padding: 0 1rem;
+}
+
+.main li a:hover{
+	color: red;
 }
